--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.5.0",
+    "postcss": "8.1.0",
     "postcss-loader": "^4.0.3",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
